--- a/demo/testBootstrapProgress.html
+++ b/demo/testBootstrapProgress.html
@@ -5,9 +5,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Bootstrap ProgressBar</title>
 
-   <!-- Bootstrap core CSS -->
    <script type="text/javascript" src="../jquery-1.8.3.min.js"></script>
 
+   <!-- Bootstrap core CSS -->
    <link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.min.css"/>
    <script type="text/javascript" src="../bootstrap/js/bootstrap.min.js"></script>
    
@@ -21,8 +21,8 @@
 	 var config={
 	   //processingMessage:'Processing,waiting please!',
 	   //pColor:'#aaaaaa',
+	   bColor:'#f8f8f8'
 	  };
-
       fnShowProgressBar(config);
 	}
    </script>
